# drawing

./: .gitignore  README.md  create_directory.py  pyproject.toml  test.py
Docs/: junction.md  resonator.md  snail.md  squid.md
Docs/junction/: README.md
Docs/squid/: README.md
Docs/transmon/: README.md
src/deprecated/: meander.py
src/drawing/: __init__.py  base_config.py  meander.py  scratch.py  shared_utilities.py  transmon.py
src/drawing/export_to_pyaedt/: config.py  parser.py
src/drawing/junction/: __init__.py  antisymmetric_junction.py  base_arm.py  base_junction.py  base_junction_imager.py  funnel_arm.py  regular_arm.py  regular_junction_imager.py  symmetric_junction.py  t_arm.py
src/drawing/meader/: config.py  euler.py  optimal_turn.py
src/drawing/meander/: euler.py  optimal_turn.py
src/drawing/resonator/: __init__.py  base_resonator.py  meander_resonator.py
src/drawing/sample/: __init__.py  base_sample.py  sample_array.py  two_resonators_two_transmon_sample.py
src/drawing/shared/: __init__.py  utilities.py
src/drawing/snail/: __init__.py  snail.py
src/drawing/squid/: __init__.py  squid.py
src/drawing/test_junctions/: __init__.py  base_test_junctions.py  five_test junctions.py  five_test_junctions.py
src/drawing/transmon/: __init__.py  antenna.py  pad.py  pads.py  taper.py  tapers.py  transmon.py
src/drawing/transmon_/: pads.py  tapers.py
src/drawing/transmon_alt/: antenna.py  pads.py  tapers.py  transmon.py
src/drawing/wafer/: __init__.py  base_align_cross.py  base_cut_indicator.py  ebeam_base_align_cross.py  laser_align_cross.py  (+3 more)
(+12 files in other folders)
